--- a/Web/index-main.css
+++ b/Web/index-main.css
@@ -1,10 +1,6 @@
-html, body{
-  height: 100%;
-}
 body { 
 	background-color: #F7F8E0;
 }
-div, body {
-  margin: 0;
-  padding: 0;
+body, html {
+	height: 100%;
 }
